# Qwen3-ASR-GGUF

./: .dockerignore  .gitignore  00-Export-Mel-Filters.py  01-Export-ASR-Encoder-Frontend.py  02-Export_ASR-Encoder-Backend.py  03-Optimize-ASR-Encoder.py  04-Quantize-ASR-Encoder.py  05-Export-ASR-Decoder-HF.py  06-Convert-ASR-Decoder-GGUF.py  07-Quantize-ASR-Decoder-GGUF.py  11-Export-Aligner-Encoder-Frontend.py  12-Export-Aligner-Encoder-Backend.py  13-Optimize-Aligner-Encoder.py  14-Quantize-Aligner-Encoder.py  15-Export-Aligner-Decoder-HF.py  16-Convert-Aligner-Decoder-GGUF.py  17-Quantize-Aligner-Decoder-GGUF.py  18-Run-Aligner.py  21-Run-ASR.py  Dockerfile  README.md  build.spec  build_hook.py  export_config.py  infer.py  main.py  pyproject.toml  run.sh  simpread-Qwen3-ASR Technical Report.md  transcribe.py  zip_release.py
.qoder/repowiki/zh/content/: 快速开始.md  故障排除.md
.qoder/repowiki/zh/content/API参考/: API参考.md  RESTful API接口.md  流式API接口.md  请求响应Schema.md  错误处理与状态码.md
.qoder/repowiki/zh/content/开发者指南/: 代码结构与模块组织.md  命令行工具使用.md  开发环境搭建.md  开发者指南.md  扩展开发指南.md  测试策略与实践.md  调试与性能分析.md
.qoder/repowiki/zh/content/性能优化/: 内存管理优化.md  并发处理优化.md  性能优化.md  性能基准测试.md  硬件性能优化.md  量化性能权衡.md
.qoder/repowiki/zh/content/核心功能/: 强制对齐功能.md  文本后处理.md  核心功能.md  语音活动检测(VAD).md  音频编码器.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
core/: config.py  gobal_exception.py  logger.py  middleware_access_log.py  middleware_auth.py  middleware_request_id.py
qwen_asr_gguf/inference/: __init__.py  aligner.py  asr.py  encoder.py  llama.py  schema.py  utils.py  vad.py
ref/llama.cpp/docs/: build-s390x.md  build.md  docker.md  function-calling.md  llguidance.md  multimodal.md  preset.md
ref/llama.cpp/docs/backend/: CANN.md  SYCL.md
ref/llama.cpp/examples/model-conversion/: README.md
ref/llama.cpp/examples/simple-cmake-pkg/: README.md
ref/llama.cpp/grammars/: README.md
ref/llama.cpp/src/: llama-context.cpp  llama-kv-cache.cpp
ref/llama.cpp/tools/completion/: README.md
ref/llama.cpp/tools/llama-bench/: README.md
ref/llama.cpp/tools/mtmd/: README.md
ref/llama.cpp/tools/server/: README.md
routers/: transcribe.py
services/: asr_service.py
utils/: file.py
(+41 files in other folders)
